[gd_scene load_steps=6 format=3 uid="uid://s3pth3bvbbvt"]

[ext_resource type="Script" path="res://Scripts/Sanity System/sanity_system.gd" id="1_4b13m"]
[ext_resource type="Script" path="res://Scripts/Sanity System/cat_photo.gd" id="2_kl5jp"]
[ext_resource type="Texture2D" uid="uid://c3ovfkl1sq6tr" path="res://Icons/icon.png" id="4_dm6jp"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_h2psw"]
blend_mode = 2

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_75hbh"]
blend_mode = 1

[node name="SanitySystem" type="Node2D"]
script = ExtResource("1_4b13m")

[node name="Sanity Debuff Area" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sanity Debuff Area"]
material = SubResource("CanvasItemMaterial_h2psw")
position = Vector2(-48, -16)
polygon = PackedVector2Array(-48, -48, 144, -48, 144, 80, -48, 80)

[node name="SanityBuffArea" type="Area2D" parent="."]
position = Vector2(177, 1)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="SanityBuffArea"]
material = SubResource("CanvasItemMaterial_75hbh")
position = Vector2(32, 0)
polygon = PackedVector2Array(-96, -64, 96, -64, 96, 64, -96, 64)

[node name="CatPhoto" type="Node2D" parent="."]
script = ExtResource("2_kl5jp")

[node name="Polygon2D" type="Polygon2D" parent="CatPhoto"]
position = Vector2(-96, -128)
texture = ExtResource("4_dm6jp")
texture_scale = Vector2(1.945, 1.945)
polygon = PackedVector2Array(0, 0, 192, 0, 192, 256, 0, 256)

[node name="Area2D" type="Area2D" parent="CatPhoto"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="CatPhoto/Area2D"]
visible = false
position = Vector2(-472, -232)
scale = Vector2(7.89583, 6.5625)
polygon = PackedVector2Array(47.6201, 15.8476, 47.6201, 54.8571, 71.9367, 54.8571, 71.9367, 15.8476)

[node name="CanvasLayer" type="CanvasLayer" parent="CatPhoto"]

[node name="BackgroundShape" type="Polygon2D" parent="CatPhoto/CanvasLayer"]
color = Color(1, 1, 1, 0)
polygon = PackedVector2Array(1152, 0, 0, 0, 0, 648, 1152, 648)

[connection signal="body_entered" from="Sanity Debuff Area" to="." method="_on_sanity_debuff_area_body_entered"]
[connection signal="body_exited" from="Sanity Debuff Area" to="." method="_on_sanity_debuff_area_body_exited"]
[connection signal="body_entered" from="SanityBuffArea" to="." method="_on_sanity_buff_area_body_entered"]
[connection signal="body_exited" from="SanityBuffArea" to="." method="_on_sanity_buff_area_body_exited"]
[connection signal="sanity_changed" from="CatPhoto" to="." method="_on_cat_photo_sanity_changed"]
[connection signal="mouse_entered" from="CatPhoto/Area2D" to="CatPhoto" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="CatPhoto/Area2D" to="CatPhoto" method="_on_area_2d_mouse_exited"]
